config to deploy website

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,8 +6,8 @@ spring:
     name: re-shopping-cart-web-app
 
   profiles:
-    # active: prod
-    active: local
+    active: prod
+    # active: local
 
   datasource:
     url: ${DB_URL}
