--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,77 +1,59 @@
-name: Build and Deploy
+name: Build & Deploy Spring Boot App to AWS EC2
 
 on:
   push:
-    branches:
-      - main
-      - master
-  workflow_dispatch:
-
-env:
-  DOCKER_IMAGE_NAME: re-shopping-cart-web-app
-  DOCKER_TAG: latest
+    branches: [main]
 
 jobs:
-  build-and-deploy:
+  build-push-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-          java-version: '21'
-          distribution: 'temurin'
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew clean build -x test
-
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }} .
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }} ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Build and push Docker image to Docker Hub
+        uses: docker/build-push-action@v5
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USER }}/re-shopping-cart-web-app:latest
 
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.3
+      - name: SSH into EC2 and deploy container
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: ${{ secrets.EC2_PORT || 22 }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
           script: |
-            # Login to Docker Hub
-            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-            
-            # Stop and remove existing container
-            docker stop ${{ env.DOCKER_IMAGE_NAME }} || true
-            docker rm ${{ env.DOCKER_IMAGE_NAME }} || true
-            
-            # Pull latest image
-            docker pull ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
-            
-            # Run new container
+            echo ">>> Stopping and removing old container if exists"
+            docker rm -f re-shopping-cart-web-app || true
+            docker rmi ${{ secrets.DOCKER_USER }}/re-shopping-cart-web-app:latest || true
+
+            echo ">>> Pulling latest image from Docker Hub"
+            docker pull ${{ secrets.DOCKER_USER }}/re-shopping-cart-web-app:latest
+
+            echo ">>> Running container"
             docker run -d \
-              --name ${{ env.DOCKER_IMAGE_NAME }} \
+              --name re-shopping-cart-web-app \
               --restart unless-stopped \
               -p 8080:8080 \
-              --env-file .env.prod \
-              ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
-            
-            # Clean up old images
-            docker image prune -f
+              -e SPRING_PROFILES_ACTIVE=prod \
+              -e DB_URL='${{ secrets.DB_URL }}' \
+              -e DB_USERNAME='${{ secrets.DB_USERNAME }}' \
+              -e DB_PASSWORD='${{ secrets.DB_PASSWORD }}' \
+              -e JAVA_OPTS="-Xms512m -Xmx512m -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0" \
+              -e TZ=UTC \
+              ${{ secrets.DOCKER_USER }}/re-shopping-cart-web-app:latest
+
+            echo ">>> Status & logs"
+            docker ps -a --filter "name=re-shopping-cart-web-ap
